--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav .navbar .menu li{
 .navbar .menu a{
   font-size: 18px;
   font-weight: 500;
-  color: #0E2431;
+  color: lightblue;
   padding: 6px 0;
   transition: all 0.4s ease;
 }
@@ -117,6 +117,9 @@ nav.sticky .menu-btn{
   background-position: center;
   background-attachment: fixed;
   font-family: 'Ubuntu', sans-serif;
+  background: url('backg3.jpg') center/cover no-repeat;
+    padding: 20px;
+    opacity: 0.7; /* Adjust the opacity as needed (0.0 to 1.0) */
 }
 .home .home-content{
   width: 90%;
@@ -128,10 +131,10 @@ nav.sticky .menu-btn{
 }
 .home .text-one{
   font-size: 25px;
-  color: #0E2431;
+  color: white;
 }
 .home .text-two{
-  color: #0E2431;
+  
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
@@ -144,7 +147,7 @@ nav.sticky .menu-btn{
 .home .text-four{
   font-size: 23px;
   margin: 5px 0;
-  color: #0E2431;
+  color: white;
 }
 .home .button{
   margin: 14px 0;
@@ -572,10 +575,7 @@ footer .text span a:hover{
           margin: 0;
       }
 
-      #education {
-        padding: 50px 0;
-        text-align: center;
-    }
+  
     table {
         width: 100%;
         max-width: 600px;
@@ -645,3 +645,18 @@ margin-right: 10px; /* Add spacing between image and text */
 .project-description p {
     color: black;
 }
+.custom-animation {
+  animation-duration: 1s; /* You can adjust the duration in seconds */
+}
+
+.custom-animation2 {
+  animation-duration: 2s; /* You can adjust the duration in seconds */
+  animation-delay: 2s;
+}
+.custom-animation3 {
+  animation-duration: 2s; /* You can adjust the duration in seconds */
+  animation-delay: 3s;
+}
+
+
+
